--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="first"><a href="index.html" class="active" title="Home">Home</a></li>
                         <li><a href="howTo.html" title="How To">How To</a></li>
                     	<li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.php" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download" id="navDownloadLink">Download</a></li>
 						<li><a href="forum" title="forum">Forum</a></li>
 						<li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()" class="fa fa-question-circle"></i></li>       
 						</ul>
@@ -129,7 +129,7 @@
                             <li><a href="term_of_use.html" title="Terms & Conditions">Terms & Conditions</a></li>
                         </ul>
                     </div>
-                    <div class="column iconColumn">
+                    <div class="column iconColumn"  id="footerSocialMedia">
                         <h2>Connect</h2>
                         <ul class="icon cf">
                             <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844" title="Facebook"><span></span>Facebook</a></li>
