--- a/product.html
+++ b/product.html
@@ -1,142 +1,164 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-<title>Authentry Gatekeeper Pro – Password Generator for Identity Theft Protection</title>
-<meta name="description" content="Gatekeeper Pro is a convenient, secure & affordable password generator that creates one easy to remember password for all of your online accounts from your mobile device">
-<meta name="keywords" content="Gatekeeper Pro, LogiKey, Mobile Two Factor Authentication, Password Safe, 2 Factor Authentication, Password Manager, Secure Password Generator, Identity Theft Protection">
-<link rel="stylesheet" type="text/css" href="css/introjs.css"/>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
+    <title>Authentry Gatekeeper Pro – Password Generator for Identity Theft Protection</title>
+    <meta name="description"
+          content="Gatekeeper Pro is a convenient, secure & affordable password generator that creates one easy to remember password for all of your online accounts from your mobile device">
+    <meta name="keywords"
+          content="Gatekeeper Pro, LogiKey, Mobile Two Factor Authentication, Password Safe, 2 Factor Authentication, Password Manager, Secure Password Generator, Identity Theft Protection">
+    <link rel="stylesheet" type="text/css" href="css/introjs.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<!--[if lte IE 8]>
-	<link href="css/ie.css" rel="stylesheet" type="text/css" media="all" />
-<![endif]-->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!--[if lte IE 8]>
+    <link href="css/ie.css" rel="stylesheet" type="text/css" media="all"/>
+    <![endif]-->
 </head>
 
 <body>
-	<div id="wrapper">
+<div id="wrapper">
     <!--Header-->
-        <div id="header">
-        	<div class="containerOld">
-            	<h1 class="logo"><a title="Gate Keeper" href="index.html"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="navOld">
-                	<ul class="navbarOld">
-                        <li class="first"><a href="index.html" title="Home">Home</a></li>
-                        <li><a href="howTo.html" title="How To">How To</a></li>
-                        <li><a href="product.html" class="active" title="Products">Products</a></li>
-                        <li><a href="download.php" title="Download">Download</a></li>
-						<li><a href="forum" title="forum">Forum</a></li>
-<li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()" class="fa fa-question-circle"></i></li>                    </ul>
-                </div>
+    <div id="header">
+        <div class="containerOld">
+            <h1 class="logo"><a title="Gate Keeper" href="index.html"><img src="images/logo.png" width="316"
+                                                                           height="289" alt="Gate Keeper"/></a></h1>
+            <div class="navOld">
+                <ul class="navbarOld">
+                    <li class="first"><a href="index.html" title="Home">Home</a></li>
+                    <li><a href="howTo.html" title="How To">How To</a></li>
+                    <li><a href="product.html" class="active" title="Products">Products</a></li>
+                    <li><a href="download.php" title="Download">Download</a></li>
+                    <li><a href="forum" title="forum">Forum</a></li>
+                    <li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()"
+                                                        class="fa fa-question-circle"></i></li>
+                </ul>
             </div>
         </div>
+    </div>
     <!--Header End-->
     <!--Main Bannr-->
-        <div id="banner">
-        	<ul class="slider cf">
-            	<li><img src="images/banner2.jpg" width="1400" height="361" alt="Banner" />
-                	<div class="containerOld"><div class="bx-caption">
+    <div id="banner">
+        <ul class="slider cf">
+            <li><img src="images/banner2.jpg" width="1400" height="361" alt="Banner"/>
+                <div class="containerOld">
+                    <div class="bx-caption">
                         <h2>Online Fraud Protection.</h2>
-                        <p>Hackers are everwhere looking to steal your private information. Defend yourself and keep the bad guys out!</p>
-                    </div></div>
-                </li>
-            </ul>
-        </div>
+                        <p>Hackers are everwhere looking to steal your private information. Defend yourself and keep the
+                            bad guys out!</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
     <!--Main Bannr End-->
     <!--Inner Page Cantent-->
-        <div class="pageCantent innerCantent">
-        	<div class="containerOld" id="productContainer">
-            	<div class="identityWorth cf">
-                	<h2><span>What’s Your Identity Worth?</span></h2>
-                	<p>Comprehensive account protection with Gatekeeper Pro helps safeguard you from hackers and fraudulent activity. In today’s connected world that’s more important than ever.</p>
-				</div>
-                <div class="categotys cf">
-                	<div class="catBlock">
-                    	<div class="cat catFt">
-                    		<h3>Gatekeeper Pro Password Manager</h3>
-                        	<img src="images/cat1.jpg" alt="" width="216" height="225" />
-                            <div class="text" id="gatekeeperProductDescription">
-                                <p>Online merchants and secure websites in most cases don’t have the proper level of security in place to keep your personal information safe. GateKeeper Pro keeps all of your account information safe in one location and allows you to create different  passwords for every account that are virtually un-hackable, and you only have to remember one master password to access any account on any device from any location.</p>
-                                <ul>
-                                    <li>Auto Fill does the work for you</li>
-                                    <li>Any Device</li>
-                                    <li>Any Account</li>
-                                    <li>Auto Remote Session Log-Off</li>
-                                    <li>Secure account backup</li>
-                                    <li>Two-factor Authentication built in</li>
-                                    <li>Multiple Secure Password Vaults</li>
-                                    <li>Password and Identity Security</li>
-                                    <li>Protects Against Phishing, Key Loggers, Brute</li>
-                                    <li>Force and Man-in-the-middle attacks</li>
-                                </ul>
-                            </div>
-                            <a href="download.php" class="btnOld" title="Free Trial">Free Trial</a>
+    <div class="pageCantent innerCantent">
+        <div class="containerOld" id="productContainer">
+            <div class="identityWorth cf">
+                <h2><span>What’s Your Identity Worth?</span></h2>
+                <p>Comprehensive account protection with Gatekeeper Pro helps safeguard you from hackers and fraudulent
+                    activity. In today’s connected world that’s more important than ever.</p>
+            </div>
+            <div class="categotys cf">
+                <div class="catBlock">
+                    <div class="cat catFt">
+                        <h3>Gatekeeper Pro Password Manager</h3>
+                        <img src="images/cat1.jpg" alt="" width="216" height="225"/>
+                        <div class="text" id="gatekeeperProductDescription">
+                            <p>Online merchants and secure websites in most cases don’t have the proper level of
+                                security in place to keep your personal information safe. GateKeeper Pro keeps all of
+                                your account information safe in one location and allows you to create different
+                                passwords for every account that are virtually un-hackable, and you only have to
+                                remember one master password to access any account on any device from any location.</p>
+                            <ul>
+                                <li>Auto Fill does the work for you</li>
+                                <li>Any Device</li>
+                                <li>Any Account</li>
+                                <li>Auto Remote Session Log-Off</li>
+                                <li>Secure account backup</li>
+                                <li>Two-factor Authentication built in</li>
+                                <li>Multiple Secure Password Vaults</li>
+                                <li>Password and Identity Security</li>
+                                <li>Protects Against Phishing, Key Loggers, Brute</li>
+                                <li>Force and Man-in-the-middle attacks</li>
+                            </ul>
                         </div>
+                        <a href="download.php" class="btnOld" title="Free Trial">Free Trial</a>
                     </div>
+                </div>
 
-                    <div class="catBlock">
-                    	<div class="cat catSd">
-                    		<h3>Mobile Two-factor Authentication</h3>
-                        	<img src="images/cat3.jpg" alt="" width="216" height="225" />
-                            <div class="text" id="twoFAProductDescription">
-                                <p>Our Mobile Passcode Verification feature comes FREE with GateKeeper Pro. It adds Two factor authentication when logging into your accounts. Think of it as a second layer of security beyond your password.  With one click MPV sends a one time Passcode to your mobile device that you use when logging into your accounts in addition to your password. Convenience and Security has never been easier.</p>
-                                <ul>
-                                    <li>Easy one touch access</li>
-                                    <li>Adds a second layer of security</li>
-                                    <li>Works on any mobile device</li>
-                                    <li>Creates a one time, one use passcode</li>
-                                    <li>Keeps the bad guys out</li>
-                                </ul>
-                            </div>
-                            <a href="download.php" class="btnOld" title="Free Download">Free Download</a>
+                <div class="catBlock">
+                    <div class="cat catSd">
+                        <h3>Mobile Two-factor Authentication</h3>
+                        <img src="images/cat3.jpg" alt="" width="216" height="225"/>
+                        <div class="text" id="twoFAProductDescription">
+                            <p>Our Mobile Passcode Verification feature comes FREE with GateKeeper Pro. It adds Two
+                                factor authentication when logging into your accounts. Think of it as a second layer of
+                                security beyond your password.  With one click MPV sends a one time Passcode to your
+                                mobile device that you use when logging into your accounts in addition to your password.
+                                Convenience and Security has never been easier.</p>
+                            <ul>
+                                <li>Easy one touch access</li>
+                                <li>Adds a second layer of security</li>
+                                <li>Works on any mobile device</li>
+                                <li>Creates a one time, one use passcode</li>
+                                <li>Keeps the bad guys out</li>
+                            </ul>
                         </div>
+                        <a href="download.php" class="btnOld" title="Free Download">Free Download</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!--Inner Page Cantent End-->
     <!--Footer-->
-    	<div id="footer">
-        	<div class="containerOld">
-            	<div class="columns">
-                    <div class="column">
-                        <h2>Company</h2>
-                        <ul>
-                            <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="howTo.html" title="Faq’s">FAQ’s</a></li>
-                            <li><a href="contact_us.html" title="Contact us">Contact us</a></li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h2>Help</h2>
-                        <ul>
-                            <li><a href="privacy_policy.html" title="Privacy Policy">Privacy Policy</a></li>
-                            <li><a href="term_of_use.html" title="Terms & Conditions">Terms & Conditions</a></li>
-                        </ul>
-                    </div>
-                    <div class="column iconColumn">
-                        <h2>Connect</h2>
-                        <ul class="icon cf">
-                            <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844" title="Facebook"><span></span>Facebook</a></li>
-                            <li><a target="_blank" href="https://twitter.com/GateKeeperPro99" title="Twitter"><span></span>Twitter</a></li>
-                        </ul>
-                    </div>
+    <div id="footer">
+        <div class="containerOld">
+            <div class="columns">
+                <div class="column">
+                    <h2>Company</h2>
+                    <ul>
+                        <li><a href="about.html" title="About">About</a></li>
+                        <li><a href="howTo.html" title="Faq’s">FAQ’s</a></li>
+                        <li><a href="contact_us.html" title="Contact us">Contact us</a></li>
+                    </ul>
                 </div>
-                <div class="fLogs">
-                	<a href="#" title="Norton"><img src="images/norton.jpg" alt="Norton" width="102" height="56" /></a>
-                    <a href="#" title="BBB"><img src="images/bbb.jpg" alt="BBB" width="101" height="56" /></a>
-                    <a href="#" title="Truste"><img src="images/truste.jpg" alt="Truste" width="137" height="56" /></a>
+                <div class="column">
+                    <h2>Help</h2>
+                    <ul>
+                        <li><a href="privacy_policy.html" title="Privacy Policy">Privacy Policy</a></li>
+                        <li><a href="term_of_use.html" title="Terms & Conditions">Terms & Conditions</a></li>
+                    </ul>
                 </div>
-                <p>Copyright © 2014 GateKeeper. All Rights Reserved.</p>
+                <div class="column iconColumn">
+                    <h2>Connect</h2>
+                    <ul class="icon cf">
+                        <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844"
+                               title="Facebook"><span></span>Facebook</a></li>
+                        <li><a target="_blank" href="https://twitter.com/GateKeeperPro99" title="Twitter"><span></span>Twitter</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+            <div class="fLogs">
+                <a href="#" title="Norton"><img src="images/norton.jpg" alt="Norton" width="102" height="56"/></a>
+                <a href="#" title="BBB"><img src="images/bbb.jpg" alt="BBB" width="101" height="56"/></a>
+                <a href="#" title="Truste"><img src="images/truste.jpg" alt="Truste" width="137" height="56"/></a>
+            </div>
+            <p>Copyright © 2014 GateKeeper. All Rights Reserved.</p>
         </div>
-    <!--Footer End-->
     </div>
+    <!--Footer End-->
+</div>
 <script type="text/javascript" src="js/function.js"></script>
 <script type="text/javascript" src="js/general.js"></script>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/viewportSize-min.js"></script>
+<script type="text/javascript" src="js/introjs/intro.js"></script>
+<script type="text/javascript" src="js/introjs/product.js"></script>
 </body>
 </html>
