--- a/about.html
+++ b/about.html
@@ -10,9 +10,17 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<!--[if lte IE 8]>
 	<link href="css/ie.css" rel="stylesheet" type="text/css" media="all" />
-<![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107268314-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-107268314-3');
+    </script>
+
 </head>
 
 <body>
