--- a/contact_us.html
+++ b/contact_us.html
@@ -11,6 +11,14 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <!--[if lte IE 8]>
     <link rel="stylesheet" type="text/css" href="css/ie.css" media="all"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107268314-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-107268314-3');
+    </script>
 <![endif]-->
 </head>
 
