--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 <!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="css/ie.css" media="all"/>
 <![endif]-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107268314-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-107268314-3');
+    </script>
 </head>
 
 <body>
