--- a/product.html
+++ b/product.html
@@ -16,6 +16,14 @@
     <!--[if lte IE 8]>
     <link href="css/ie.css" rel="stylesheet" type="text/css" media="all"/>
     <![endif]-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107268314-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-107268314-3');
+    </script>
 </head>
 
 <body>
