Bootstrap 4     /testhomepage.html

--- a/contact_us.html
+++ b/contact_us.html
@@ -26,9 +26,9 @@
     <div id="wrapper">
     <!--Header-->
         <div id="header">
-            <div class="containerOld">
+            <div class="containerOld navContainer">
                 <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
+                <div class="navOld0">
                     <ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="howTo.html" title="How To">How To</a></li>
