--- a/howTo.html
+++ b/howTo.html
@@ -29,7 +29,7 @@
 <div id="wrapper">
     <!--Header-->
     <div id="header">
-        <div class="containerOld">
+        <div class="containerOld navContainer">
             <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316"
                                                                            height="289" alt="Gate Keeper"/></a></h1>
             <div class="navOld">
@@ -39,7 +39,7 @@
                     <li><a href="product.html" title="Products">Products</a></li>
                     <li><a href="download.php" title="Download" id="down1">Download</a></li>
                     <li><a href="forum" title="forum">Forum</a></li>
-                    <li class="last" id="outterHelp"><i id="btnHelp" title="Help" data-help="home"
+                    <li class="last" id="outterHelp" style="margin-left:10px"><i id="btnHelp" title="Help" data-help="home"
                                                         class="fa fa-question-circle"></i></li>
                 </ul>
             </div>
