--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <script type="text/javascript" src="js/jquery.min.js"></script>
-<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="css/ie.css" media="all"/>
-<![endif]-->
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107268314-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -29,8 +28,11 @@
 	<div id="wrapper">
     <!--Header-->
         <div id="header">
-        	<div class="containerOld">
-            	<h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
+        	<div class="containerOld navContainer">
+            	<h1 class="logo">
+                    <a href="index.html" title="Gate Keeper">
+                        <img src="images/logo.png" width="316" height="289" alt="Gate Keeper" />
+                    </a></h1>
                 <div class="navOld">
                 	<ul class="navbarOld">
                         <li class="first"><a href="index.html" class="active" title="Home">Home</a></li>
@@ -38,13 +40,14 @@
                     	<li><a href="product.html" title="Products">Products</a></li>
                         <li><a href="download.php" title="Download" id="navDownloadLink">Download</a></li>
 						<li><a href="forum" title="forum">Forum</a></li>
-						<li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()" class="fa fa-question-circle"></i></li>       
+						<li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()" class="fa fa-question-circle"></i></li>
 						</ul>
                 </div>
             </div>
         </div>
     <!--Header End-->
     <!--Main Bannr-->
+
         <div id="banner">
         	<ul class="slider cf">
             	<li><img src="images/banner1.jpg" width="1400" height="361" alt="Banner" />
@@ -56,6 +59,8 @@
                 </li>
             </ul>
         </div>
+
+
     <!--Main Bannr End-->
     <!--Home Page Cantent-->
         <div class="pageCantent homeCantent">
