--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
 <div id="wrapper">
     <!--Header-->
     <div id="header">
-        <div class="containerOld">
+        <div class="containerOld navContainer">
             <h1 class="logo"><a title="Gate Keeper" href="index.html"><img src="images/logo.png" width="316"
                                                                            height="289" alt="Gate Keeper"/></a></h1>
             <div class="navOld">
