--- a/term_of_use.html
+++ b/term_of_use.html
@@ -28,7 +28,7 @@
     <div id="wrapper">
     <!--Header-->
         <div id="header">
-            <div class="containerOld">
+            <div class="containerOld navContainer">
                 <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
                 <div class="navOld">
                     <ul class="navbarOld">
