--- a/testHomePage.html
+++ b/testHomePage.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>GateKeeper Pro</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="css/bootstrap4.min.css">
 
     <!-- Custom fonts for this template -->
-    <!--<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/simple-line-icons/css/simple-line-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -40,13 +39,16 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <!--TODO Gatekeeper brand logo-->
-        <!--<img src="images/testBrandLogo.png" alt="Gate Keeper" style="position: absolute; top: 0; z-index: 100">-->
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            GateKeeper Pro
+            <!--GateKeeper Pro-->
+            <img src="images/testBrandLogo.png" alt="Gate Keeper">
+
         </a>
 
 
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
             Menu
             <i class="fa fa-bars"></i>
         </button>
@@ -76,28 +78,20 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-lg-7 my-auto">
-                <!--<div class="header-content mx-auto">-->
-                    <h1 class="mb-5">GateKeeper Pro saves all of your accounts, usernames and passwords in one secure location and allows you to auto-login</h1>
-                    <!--<div class="device-container" style="margin: 0">-->
-                    <div class="col-sm-6 col-lg-6 col-md-6" style="margin: 0">
-                        <div class="device-mockup imac">
-                            <div class="device">
-                                <div class="screen">
-                                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="images/Bootstrap4/demo-screen-1.jpg" class="img-fluid" alt="">
-                                </div>
-                                <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                                </div>
-                            </div>
+                <h1 class="mb-3" style="margin-top: 3rem!important;">
+                    GateKeeper Pro saves all of your accounts, usernames and passwords in one secure location
+                </h1>
+                <div class="col-lg-12 text-center" style="padding: 0;">
+                <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger mb-3">Start Now for Free!</a>
+                </div>
+                <div class="device-mockup imac">
+                    <div class="device">
+                        <div class="screen">
+                            <img src="images/Bootstrap4/demo-screen-1.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
-                <div class="device-container col-sm-6 col-lg-6 col-md-6" style="margin: 0">
-                <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
-
                 </div>
 
-                <!--</div>-->
             </div>
             <div class="col-lg-5 my-auto">
                 <div class="device-container">
@@ -114,6 +108,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </header>
@@ -170,7 +165,8 @@
                             <div class="feature-item">
                                 <i class="icon-screen-smartphone text-primary"></i>
                                 <h3>Two-Factor Authentication</h3>
-                                <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                <p class="text-muted">Put an image, video, animation, or anything else in the
+                                    screen!</p>
                             </div>
                         </div>
                     </div>
@@ -180,7 +176,8 @@
                                 <i class="icon-user-follow text-primary"></i>
                                 <!--<i class="icon-social-dropbox text-primary"></i>-->
                                 <h3>Any Account</h3>
-                                <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                <p class="text-muted">As always, this theme is free to download and use for any
+                                    purpose!</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -213,11 +210,11 @@
             <div class="section-heading text-center">
                 <h2>How To</h2>
                 <p class="text-muted">Install, Setup, Use</p>
-                <hr>
+                <hr style="max-width: 270px;">
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-lg-6">
-                   <h3> 1) Dowload the app </h3>
+                    <h3> 1) Dowload the app </h3>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="device-container" style="height: 50%; width: 50%">
@@ -237,7 +234,8 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-lg-6">
-                    <h3> 2) Create an account with GateKeeper (Use a third party account for quick account creation)</h3>
+                    <h3> 2) Create an account with GateKeeper (Use a third party account for quick account
+                        creation)</h3>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="device-container" style="height: 25%; width: 25%">
@@ -257,7 +255,8 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-lg-6">
-                    <h3> 3) After creating an account and logging in click the "Actions" button in the top right to start adding accounts</h3>
+                    <h3> 3) After creating an account and logging in click the "Actions" button in the top right to
+                        start adding accounts</h3>
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="device-container" style="height: 25%; width: 25%">
@@ -334,30 +333,36 @@
                 </button>
             </div>
             <div class="modal-body">
-                    <ol id="faqList">
-                        <li class="faqQuestion">How is it that Gatekeeper doesn't need or keep my Password? Don’t you need it to work?</li>
-                        <p class="faqAnswer">We authenticate you based on your device. You use your Master Password to only decrypt your
-                            own data locally on your computer, and your data is successfully decrypted only if you
-                            provided the right one.
-                        </p>
+                <ol id="faqList">
+                    <li class="faqQuestion">How is it that Gatekeeper doesn't need or keep my Password? Don’t you need
+                        it to work?
+                    </li>
+                    <p class="faqAnswer">We authenticate you based on your device. You use your Master Password to only
+                        decrypt your
+                        own data locally on your computer, and your data is successfully decrypted only if you
+                        provided the right one.
+                    </p>
 
-                        <li class="faqQuestion">What if Gatekeepers password gets hacked?</li>
-                        <p class="faqAnswer">We take every precaution to keep our servers secure through 24x7 building monitoring,
-                            biometric entryways and armed guards. Your data is always encrypted with AES-256, with a
-                            unique key for each user that isn't recorded anywhere. Without these keys, this encrypted
-                            data is useless to anyone, even us.</p>
+                    <li class="faqQuestion">What if Gatekeepers password gets hacked?</li>
+                    <p class="faqAnswer">We take every precaution to keep our servers secure through 24x7 building
+                        monitoring,
+                        biometric entryways and armed guards. Your data is always encrypted with AES-256, with a
+                        unique key for each user that isn't recorded anywhere. Without these keys, this encrypted
+                        data is useless to anyone, even us.</p>
 
-                        <li class="faqQuestion">Is my data safe in the cloud?</li>
-                        <p class="faqAnswer">Absolutely safe. Our cloud holds only encrypted data, which is useless without your unique
-                            Master Password-derived key (because of the AES-256 encryption algorithm.) And we don't have
-                            any record anywhere.</p>
+                    <li class="faqQuestion">Is my data safe in the cloud?</li>
+                    <p class="faqAnswer">Absolutely safe. Our cloud holds only encrypted data, which is useless without
+                        your unique
+                        Master Password-derived key (because of the AES-256 encryption algorithm.) And we don't have
+                        any record anywhere.</p>
 
-                        <li class="faqQuestion">What if I forget my Master Password?</li>
-                        <p class="faqAnswer">We never store your Password, your data is unrecoverable if you forget it – the good news is,
-                            now you only have one password to remember for all of your accounts so it should make it
-                            easier for you to remember! Our users like the fact that this is the only way for us to
-                            ensure that their data is inaccessible to anyone but them.</p>
-                    </ol>
+                    <li class="faqQuestion">What if I forget my Master Password?</li>
+                    <p class="faqAnswer">We never store your Password, your data is unrecoverable if you forget it – the
+                        good news is,
+                        now you only have one password to remember for all of your accounts so it should make it
+                        easier for you to remember! Our users like the fact that this is the only way for us to
+                        ensure that their data is inaccessible to anyone but them.</p>
+                </ol>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
